# discovered_check

./: .flake8  .gitignore  README.md  db.sqlite3  pyproject.toml
.github/scripts/: claude_pr_responder.py
.github/workflows/: claude-pr-responder.yml
accounts/: models.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_authtoken.py  0002_profile.py  0003_alter_authtoken_access_token_and_more.py  0003_delete_profile.py
accounts/templates/: signin.html  signup.html
backend/: .env.example  pyproject.toml
backend/apps/analytics/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/analytics/migrations/: 0001_initial.py  0002_initial.py
backend/apps/games/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/games/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
backend/apps/imports/: admin.py  lichess_client.py  models.py  pgn_parser.py  serializers.py  tactics_detector.py  urls.py  views.py
backend/apps/imports/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_usersession.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py
core/: settings.py  urls.py
dashboards/: urls.py  views.py
dashboards/templates/: overview.html
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
games/: admin.py  enums.py  models.py  services.py
games/migrations/: 0001_initial.py  0002_player.py  (+5 more)
players/: enums.py  models.py  views.py
static/: authentication.css
(+42 files in other folders)
